--- a/Roben Rómeó/c#/BukkMaraton2019/BukkMaraton2019GUI/BukkMaraton2019GUI/MainWindow.xaml
+++ b/Roben Rómeó/c#/BukkMaraton2019/BukkMaraton2019GUI/BukkMaraton2019GUI/MainWindow.xaml
@@ -5,37 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BukkMaraton2019GUI"
         mc:Ignorable="d"
-        Title="BukkMaraton2019" Height="450" Width="800">
+        Title="Bükk Maraton 2019" Height="250" Width="400">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="171*"/>
-            <ColumnDefinition Width="229*"/>
-        </Grid.ColumnDefinitions>
-        <Label Content="Táv:  " Margin="26,39,167,357" RenderTransformOrigin="0.5,0.5">
-            <Label.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-0.163"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Label.RenderTransform>
-        </Label>
-        <Label Content="idő(perc;másodperc):" HorizontalAlignment="Left" Margin="30,80,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.287,-1.803"/>
-        <Label Content="átlagsebesség kmk/h:" HorizontalAlignment="Left" Margin="30,138,0,0" VerticalAlignment="Top" RenderTransformOrigin="-4.317,-2.144"/>
-        <Label Content="átlagsebesség m/s :" HorizontalAlignment="Left" Margin="36,191,0,0" VerticalAlignment="Top" RenderTransformOrigin="-4.32,-0.166"/>
-        <TextBox HorizontalAlignment="Left" Margin="156,88,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <ComboBox Margin="91,0,7,354" Height="65" VerticalAlignment="Bottom">
-            <ComboBoxItem Content="16km"/>
-            <ComboBoxItem Content="38km"/>
-            <ComboBoxItem Content="54km"/>
-            <ComboBoxItem Content="57km"/>
-            <ComboBoxItem Content="94km"/>
+        <Label Content="Táv:" HorizontalAlignment="Left" Height="28" Margin="30,40,0,0" VerticalAlignment="Top" Width="31"/>
+        <Label Content="Idő [óra:perc:mp]:" HorizontalAlignment="Left" Height="28" Margin="30,75,0,0" VerticalAlignment="Top" Width="105"/>
+        <Label Content="Átlagsebesség [km/h]:" HorizontalAlignment="Left" Height="28" Margin="30,136,0,0" VerticalAlignment="Top" Width="130"/>
+        <Label Content="Átlagsebesség [m/s]:" HorizontalAlignment="Left" Height="28" Margin="30,164,0,0" VerticalAlignment="Top" Width="130"/>
+        <ComboBox Name="CbTav" HorizontalAlignment="Left" Height="25" Margin="66,44,0,0" VerticalAlignment="Top" Width="170">
+            <ComboBoxItem Content="Mini - 16km"/>
+            <ComboBoxItem Content="Rövid - 38km"/>
+            <ComboBoxItem Content="Pedelec - 54km"/>
+            <ComboBoxItem Content="Közép - 57km" IsSelected="True"/>
+            <ComboBoxItem Content="Hosszú - 94km"/>
         </ComboBox>
-        <TextBlock x:Name="ÁtlagsebességKmPh" HorizontalAlignment="Left" Margin="167,138,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="35" Width="146"/>
-        <TextBlock x:Name="ÁtlagsebességMPs" HorizontalAlignment="Left" Margin="167,191,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="35" Width="146"/>
-        <Button Content="Számol" HorizontalAlignment="Left" Margin="228,60,0,0" VerticalAlignment="Top" Height="157" Width="164" Grid.Column="1"/>
-
-
+        <TextBox Name="TbIdo" HorizontalAlignment="Left" Height="20" Margin="135,79,0,0" TextWrapping="Wrap" Text="1:00:00" VerticalAlignment="Top" Width="101"/>
+        <TextBlock Name="TbAtlagSebessegKmh" HorizontalAlignment="Left" Height="14" Margin="160,142,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100"/>
+        <TextBlock Name="TbAtlagSebessegMs" HorizontalAlignment="Center" Height="14" Margin="0,170,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100"/>
+        <Button Name="BtnSzamol" Content="Számol" HorizontalAlignment="Left" Height="77" Margin="263,44,0,0" VerticalAlignment="Top" Width="92" Click="BtnSzamol_Click"/>
     </Grid>
 </Window>
