--- a/Szabó Levente Tamás/c#/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Szabó Levente Tamás/c#/WpfApp1/WpfApp1/MainWindow.xaml
@@ -1,27 +1,36 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="bukkmaraton2019GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:bukkmaraton2019GUI"
         mc:Ignorable="d"
         Title="Bükk Maraton 2019" Height="450" Width="800">
     <Grid>
-        <Label Name="cbTav" Content="Táv" HorizontalAlignment="Left" Height="42" Margin="23,10,0,0" VerticalAlignment="Top" Width="123"/>
-        <Label Name="tbAtlagSebessegkmph" Content="Átlagsebesség [km/h]" HorizontalAlignment="Left" Height="42" Margin="23,128,0,0" VerticalAlignment="Top" Width="123"/>
-        <Label Name="tbIdo" Content="Idő" HorizontalAlignment="Left" Height="42" Margin="23,69,0,0" VerticalAlignment="Top" Width="123"/>
-        <Label Name="tbAtlagSebessegmps" Content="Átlagsebesség [m/s]" HorizontalAlignment="Left" Height="42" Margin="23,186,0,0" VerticalAlignment="Top" Width="123"/>
-        <ComboBox HorizontalAlignment="Left" Height="42" Margin="279,10,0,0" VerticalAlignment="Top" Width="169">
+        <Label Content="Táv:" HorizontalAlignment="Left" Margin="67,43,0,0" VerticalAlignment="Top" Width="123" Height="57"/>
+        <Label Content="Idő [óra:perc:mp]:" HorizontalAlignment="Left" Margin="67,117,0,0" VerticalAlignment="Top" RenderTransformOrigin="-4.681,-2.914"/>
+        <Label Content="Átlagsebesség [km/h]:" HorizontalAlignment="Left" Margin="67,191,0,0" VerticalAlignment="Top"/>
+        <Label Content="Átlagsebesség [m/s]:" HorizontalAlignment="Left" Margin="67,293,0,0" VerticalAlignment="Top" RenderTransformOrigin="-4.884,-0.316"/>
+        <ComboBox Name="cbTav" HorizontalAlignment="Left" Margin="302,27,0,0" VerticalAlignment="Top" Width="235" Height="60">
             <ComboBoxItem Content="Mini - 16km"/>
             <ComboBoxItem Content="Rövid - 38km"/>
             <ComboBoxItem Content="Pedelec - 54km"/>
             <ComboBoxItem Content="Közép - 57km" IsSelected="True"/>
             <ComboBoxItem Content="Hosszú - 94km"/>
         </ComboBox>
-        <TextBlock HorizontalAlignment="Left" Height="42" Margin="279,128,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="169"/>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="279,69,0,0" TextWrapping="Wrap" Text="1:00:00" VerticalAlignment="Top" Width="169" TextChanged="TextBox_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Height="42" Margin="279,186,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="169"/>
-        <Button Content="Számol" HorizontalAlignment="Left" Height="139" Margin="516,31,0,0" VerticalAlignment="Top" Width="153" Click="Button_"/>
+        <TextBox Name="tbIdo" HorizontalAlignment="Left" Margin="302,105,0,0" TextWrapping="Wrap" Text="1:00:00" VerticalAlignment="Top" Width="235" Height="60"/>
+        <TextBlock Name="tbAtlagSebessegKmPH" HorizontalAlignment="Center" Margin="0,277,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="58" Width="180"/>
+        <TextBlock Name="tbAtlagSebessegMPS" HorizontalAlignment="Left" Margin="318,178,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="54" Width="180"/>
+        <Button Name="btnSzamol" Content="Számol" HorizontalAlignment="Left" Margin="600,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="107" Width="116" Click="btnSzamol_Click">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.098"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
 
     </Grid>
 </Window>
