--- a/Szabó Levente Tamás/c#/karacsonyGUI/karacsonyGUI/MainWindow.xaml
+++ b/Szabó Levente Tamás/c#/karacsonyGUI/karacsonyGUI/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Label Content="Eladott:" HorizontalAlignment="Left" Height="35" Margin="450,32,0,0" VerticalAlignment="Top" Width="63"/>
         <TextBox Name="tbeladot" HorizontalAlignment="Left" Height="33" Margin="518,34,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="81"/>
         <Button Name="btnhozzad" Content="Hozzáad" HorizontalAlignment="Left" Height="35" Margin="642,32,0,0" VerticalAlignment="Top" Width="88" Click="btnhozzad_Click"/>
-        <TextBlock Name="ki" HorizontalAlignment="Left" Height="297" Margin="34,100,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="425"/>
+        <TextBlock Name="ki" HorizontalAlignment="Left" Height="297" Margin="34,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="425"/>
         <Label Name="hiba" Content="" HorizontalAlignment="Left" Height="28" Margin="459,72,0,0" VerticalAlignment="Top" Width="271" Foreground="red"/>
     </Grid>
 </Window>
