--- a/Szabó Levente Tamás/js/jsprojekt/he.css
+++ b/Szabó Levente Tamás/js/jsprojekt/he.css
@@ -1,24 +1,8 @@
-.zold{
-    background-color: green;
+.rectangle{
     text-align: center;
     color: white;
     width: 120px;
     height: 50px;
     margin: 30px;
-}
-.kek{
-    background-color: blue;
-    text-align: center;
-    color: white;
-    width: 120px;
-    height: 50px;
-    margin: 30px;
-}
-.orang{
-    background-color: orange;
-    text-align: center;
-    color: white;
-    width: 120px;
-    height: 50px;
-    margin: 30px;
+    font-size: 30px;
 }
